--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
 
-QtGeneratedFiles_debug/aes_demo.vc.pdb
-QtGeneratedFiles_debug/aesencrypt.obj
-QtGeneratedFiles_debug/base64.obj
-QtGeneratedFiles_debug/hex.obj
-QtGeneratedFiles_debug/main.obj
-QtGeneratedFiles_debug/mainwindow.obj
-QtGeneratedFiles_debug/moc_aesencrypt.cpp
-QtGeneratedFiles_debug/moc_aesencrypt.obj
-QtGeneratedFiles_debug/moc_mainwindow.cpp
-QtGeneratedFiles_debug/moc_mainwindow.obj
-QtGeneratedFiles_debug/moc_predefs.h
-QtGeneratedFiles_debug/moc_qaesencryption.cpp
-QtGeneratedFiles_debug/moc_qaesencryption.obj
-QtGeneratedFiles_debug/qaesencryption.obj
-QtGeneratedFiles_debug/ui_mainwindow.h
+QtGeneratedFiles_debug/*
+QtGeneratedFiles_release/*
 Aes_demo.pro.user
 bin_debug/Aes_demo.exe
 bin_debug/Aes_demo.ilk
